--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">WebServicesProject</string>
-    <string name="info_title_text">Enter a Id between 1 to 10 to get post details</string>
+    <string name="info_title_text">Enter id</string>
     <string name="input_hint_text">Enter between 1 to 10</string>
     <string name="get_details_btn_text">Get Details</string>
     <string name="id_text_placeholder">Id: N/A</string>
